server/src/lsp/diagnostics/snapshots/janet_zed_server__lsp__diagnostics__tests__highlights_nothing_past_the_end.snap
---
source: server/src/lsp/diagnostics/tests.rs
expression: "(defn f [x]\n"
---
----- PROBLEM
4:0 unexpected end

----- HIGHLIGHT
(defn f [x]

↑
