server/src/lsp/diagnostics/snapshots/janet_zed_server__lsp__diagnostics__tests__highlights_the_first_line_of_the_form.snap
---
source: server/src/lsp/diagnostics/tests.rs
expression: "(defn f [x]\n  (undefined-thing x))\n"
---
----- PROBLEM
1:1 boom

----- HIGHLIGHT
(defn f [x]
▔▔▔▔▔▔▔▔▔▔▔
  (undefined-thing x))
