server/src/lsp/diagnostics/snapshots/janet_zed_server__lsp__diagnostics__tests__highlights_the_unknown_symbol.snap
---
source: server/src/lsp/diagnostics/tests.rs
expression: "(defn f [x]\n  (undefined-thing x))\n"
---
----- PROBLEM
2:3 unknown symbol undefined-thing

----- HIGHLIGHT
(defn f [x]
  (undefined-thing x))
   ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
